--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -4,5 +4,6 @@ jugador.label.identifiquese=Ingrese su nombre 2
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=Debe ingresar su nombre
 error.jugador.valor.comienzaConNumero=Su nombre debe comenzar con una letra
+error.intento.valor.vacio=Ingrese un numero entre 1 y 100
 error.intento.valor.fueraDeRango=el valor debe ser entre 1 y 100
 typeMismatch.valorElegido=debe ser un numero
