--- a/tpmvc/src/resources/mensajes_en.properties
+++ b/tpmvc/src/resources/mensajes_en.properties
@@ -1,8 +1,9 @@
-partida.titulo=Gues de namber
-partida.label.valorElegido=Select value
-jugador.label.identifiquese=enter shor neim
-error.intento.valor.noAcertado=you screwd up
-error.jugador.valor.vacio=you must enter your name, fckin mormon
-error.jugador.valor.comienzaConNumero=iour neim mast start udi a leter
-error.intento.valor.fueraDeRango=outrenge
-typeMismatch.valorElegido=it mast jav bin loc
+partida.titulo=Guess the number 
+partida.label.valorElegido=Enter a number
+jugador.label.identifiquese=Enter your name 
+error.intento.valor.noAcertado=le pifiaste
+error.jugador.valor.vacio=You must enter your name
+error.jugador.valor.comienzaConNumero=Your name must start with a letter
+error.intento.valor.vacio=Enter a number between 1 and 100
+error.intento.valor.fueraDeRango=The number must be between 1 and 100
+typeMismatch.valorElegido=Enter a number
