--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -1,6 +1,6 @@
-partida.titulo=Descubre el numero 1
+partida.titulo=Adivina el numero 
 partida.label.valorElegido=Seleccionar Valor
-jugador.label.identifiquese=Ingrese su nombre 2
+jugador.label.identifiquese=Ingrese su nombre 
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=Debe ingresar su nombre
 error.jugador.valor.comienzaConNumero=Su nombre debe comenzar con una letra
