--- a/tpmvc/src/resources/mensajes_en.properties
+++ b/tpmvc/src/resources/mensajes_en.properties
@@ -1,9 +1,32 @@
-partida.titulo=Guess the number 
-partida.label.valorElegido=Enter a number
+titulo=Guess the number 
+jugador=Player
+reiniciar=restart
+salir=logout
 jugador.label.identifiquese=Enter your name 
+
+ 
+partida.label.valorElegido=Enter a number
+partida.botonIntentar=Try!
+partida.ganaste=You win!
+partida.ganaste.mensaje=in {0} attempts! 
+partida.perdiste=Say goose!
+partida.perdiste.mensaje=The number was {0}
+
+estadisticas=Stats
+estadisticas.label.marcaSesion=Best score in this session 
+estadisticas.label.marcaNavegador=Best score in this browser
+estadisticas.label.jugadorNavegador=Best player in this browser
+estadisticas.label.jugadorSistema=Best player in all the system
+
+intentos=Attempts
+intentos.EsMayor=Is greater
+intentos.EsMenor=is lower
+
+
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=You must enter your name
 error.jugador.valor.comienzaConNumero=Your name must start with a letter
 error.intento.valor.vacio=Enter a number between 1 and 100
 error.intento.valor.fueraDeRango=The number must be between 1 and 100
+
 typeMismatch.valorElegido=Enter a number
