--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -1,6 +1,28 @@
-partida.titulo=Adivina el numero 
+titulo=Adivina el numero
+jugador=Jugador
+reiniciar=reiniciar
+salir=salir
+jugador.label.identifiquese=Ingrese su nombre
+
+ 
 partida.label.valorElegido=Seleccionar Valor
-jugador.label.identifiquese=Ingrese su nombre 
+partida.botonIntentar=Intentar!
+partida.ganaste=Ganaste!
+partida.ganaste.mensaje=en {0} intentos! 
+partida.perdiste=Deci alpiste!
+partida.perdiste.mensaje=El numero era {0}
+
+estadisticas=Estadisticas
+estadisticas.label.marcaSesion=Mejor marca en esta sesión.
+estadisticas.label.marcaNavegador=Mejor marca en este navegador
+estadisticas.label.jugadorNavegador=Mejor jugador en este navegador
+estadisticas.label.jugadorSistema=Mejor jugador del sistema
+
+intentos=Intentos
+intentos.EsMayor=Es Mayor
+intentos.EsMenor=Es Menor
+
+
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=Debe ingresar su nombre
 error.jugador.valor.comienzaConNumero=Su nombre debe comenzar con una letra
