--- a/tpmvc/src/resources/mensajes_en.properties
+++ b/tpmvc/src/resources/mensajes_en.properties
@@ -1,6 +1,7 @@
 titulo=Guess the number 
 jugador=Player
 reiniciar=restart
+entrar=Log in
 salir=logout
 jugador.label.identifiquese=Enter your name 
 
