--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -1,6 +1,7 @@
 titulo=Adivina el numero
 jugador=Jugador
 reiniciar=reiniciar
+entrar=Entrar
 salir=salir
 jugador.label.identifiquese=Ingrese su nombre
 
