--- a/tpmvc/src/resources/mensajes_en.properties
+++ b/tpmvc/src/resources/mensajes_en.properties
@@ -3,6 +3,8 @@ jugador=Player
 reiniciar=restart
 entrar=Log in
 salir=logout
+idioma=Select your language
+
 jugador.label.identifiquese=Enter your name 
 
  
