--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -3,6 +3,8 @@ jugador=Jugador
 reiniciar=reiniciar
 entrar=Entrar
 salir=salir
+idioma=Seleccione su idioma
+
 jugador.label.identifiquese=Ingrese su nombre
 
  
