Correcciones post entrega

--- a/tpmvc/src/resources/mensajes_es.properties
+++ b/tpmvc/src/resources/mensajes_es.properties
@@ -15,7 +15,9 @@ partida.ganaste.mensaje=en {0} intentos!
 partida.perdiste=Deci alpiste!
 partida.perdiste.mensaje=El numero era {0}
 
-estadisticas=Estadisticas
+estadisticasPersonales=Estadisticas Personales
+estadisticasGenerales=Estadisticas Generales
+
 estadisticas.label.marcaSesion=Mejor marca en esta sesión.
 estadisticas.label.marcaNavegador=Mejor marca en este navegador
 estadisticas.label.jugadorNavegador=Mejor jugador en este navegador
@@ -24,7 +26,7 @@ estadisticas.label.jugadorSistema=Mejor jugador del sistema
 intentos=Intentos
 intentos.EsMayor=Es Mayor
 intentos.EsMenor=Es Menor
-
+intentos.Correcto=Corrrecto!
 
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=Debe ingresar su nombre
