--- a/tpmvc/src/resources/mensajes_en.properties
+++ b/tpmvc/src/resources/mensajes_en.properties
@@ -15,7 +15,9 @@ partida.ganaste.mensaje=in {0} attempts!
 partida.perdiste=Say goose!
 partida.perdiste.mensaje=The number was {0}
 
-estadisticas=Stats
+estadisticasPersonales=Personal stats
+estadisticasGenerales=General stats
+
 estadisticas.label.marcaSesion=Best score in this session 
 estadisticas.label.marcaNavegador=Best score in this browser
 estadisticas.label.jugadorNavegador=Best player in this browser
@@ -24,7 +26,7 @@ estadisticas.label.jugadorSistema=Best player in all the system
 intentos=Attempts
 intentos.EsMayor=Is greater
 intentos.EsMenor=is lower
-
+intentos.Correcto=Rright!
 
 error.intento.valor.noAcertado=le pifiaste
 error.jugador.valor.vacio=You must enter your name
